# TinySDP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  styles.css
examples/: CMakeLists.txt  dynamic_3d_demo.cpp  ushape_demo.cpp
include/solver/: admm.hpp  error.hpp  psd_support.hpp  tiny_api.hpp  types.hpp
scripts/: plot_examples.py
src/solver/: admm.cpp  tiny_api.cpp
